Fix Terminal overflow

--- a/src/components/Layout/_layout.scss
+++ b/src/components/Layout/_layout.scss
@@ -4,6 +4,10 @@
   min-height: 100vh;
 }
 
+.l-main {
+  position: relative;
+}
+
 .l-side {
   background: #002835;
   padding: 0.5rem;
